# cdkata

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: black.yml  codeql-analysis.yml  coverage.yml
cdkata/: cli.py
cdkata/tests/: test_cli.py
tests/: test_cdkata.py
